report
main.go:25:51: non-wrapping format verb for fmt.Errorf. Use `%w` to format errors (errorlint)
		return fmt.Errorf("errorlint, do it again: %v", err)
		                                                ^
main.go:17:10: error returned from external package is unwrapped: sig: func fmt.Errorf(format string, a ...interface{}) error (wrapcheck)
		return fmt.Errorf("wrapcheck, do it again: %w", err)
		       ^
